--- a/index.html
+++ b/index.html
@@ -8157,7 +8157,7 @@ const quarterlyReportsSection = `
             const { html, title } = window.tempReportContent;
             const newWindow = window.open("", "_blank");
 
-            // Define CSS separately WITH CORRECT SPACING
+            // Define CSS separately (ensures correct formatting)
             const reportStyles = `
                 body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; padding: 2rem; margin: 0; }
                 .markdown-content { max-width: 800px; margin: auto; }
@@ -8170,16 +8170,19 @@ const quarterlyReportsSection = `
                 a { color: #0366d6; text-decoration: none; }
                 a:hover { text-decoration: underline; }
             `;
-            // Write the HTML structure correctly using the CSS string
-            newWindow.document.write(\`
-                <html>
-                    <head>
-                        <title>\${title}</title>
-                        <style>\${reportStyles}</style>
-                    </head>
-                    <body><div class="markdown-content">\${html}</div></body>
-                </html>
-            \`);
+
+            // Build HTML using standard string concatenation (+)
+            const newWindowHtml =
+                '<html>' +
+                '<head>' +
+                '<title>' + title + '</title>' +
+                '<style>' + reportStyles + '</style>' +
+                '</head>' +
+                '<body><div class="markdown-content">' + html + '</div></body>' +
+                '</html>';
+
+            // Write the concatenated string
+            newWindow.document.write(newWindowHtml);
             newWindow.document.close();
             closeCustomModal('report-viewer-modal');
         }
